updated report page

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
                 </section>
 
                 <!-- FEATURE PAGE -->
+                <hr>
                 <section id="feature-page">
                     <h2 class="feature-title revealed">App Features</h2>
                     <img class="feature-img revealed" src="https://images.unsplash.com/photo-1535402803947-a950d5f7ae4b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a1ee9193f083f265226c9d0e0b3ec8c9&auto=format&fit=crop&w=500&q=60"
@@ -88,7 +89,8 @@
                     </div>
                 </section>
 
-                <!-- FEATURE PAGE -->
+                <!-- HOW TO PAGE -->
+                <hr>
                 <section id="howto-page">
                     <h2 class="howto-title revealed">How To Use</h2>
                     <img class="howto-img revealed" src="https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc8be37d913994b3540169a890e2242d&auto=format&fit=crop&w=500&q=60"
@@ -215,7 +217,7 @@
 
             <!-- MAIN PAGE -->
             <section class="main-page">
-                <p class="welcome">Welcome, <span class="my-username"></span> to Caritas Auxilium</p>
+                <p class="welcome">Welcome, <span class="my-username"></span>, to Caritas Auxilium</p>
 
                 <!-- RECENT CRISIS PAGE -->
                 <section class="recent-crisis">
