--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,6 @@
                 <div class="inside-menu-content">
                     <ul>
                         <li id="new-crisis"><i class="fas fa-hands-helping"></i> Recent Crisis </li>
-                        <li id="crisis"><i class="fas fa-donate"></i> My Crisis</li>
                         <li id="donations"><i class="fas fa-file-invoice-dollar"></i> My Donations</li>
                         <li id="account"><i class="fas fa-cogs"></i> My Account</li>
                         <li id="reports"><i class="fas fa-chart-bar"></i> My Reports</li>
@@ -229,24 +228,12 @@
                     <div class="crisis-container">
                         <!-- RECENT CRISIS GOES HERE -->
                     </div>
-                </section>
-
-                <!-- MY CRISIS PAGE -->
-                <section class="my-crisis">
-                    <div class="form-group">
-                        <label for="searchMyCrisis">Search My Crisis</label>
-                        <input type="text" id="searchMyCrisis" name="searchMyCrisis">
-                        <button class="search-my-crisis">search</button>
-                    </div>
-                    <div class="my-crisis-container">
-                        <!-- USER CRISIS GOES HERE -->
-                    </div>
                     <div class="donation-page">
                         <form class="donation-form">
                             <fieldset>
                                 <legend>Donate your $$$</legend>
-                                <h4 id="crisisTitleDP"></h4>
-                                <p id="crisisDateDP"></p>
+                                <h4 id="crisisTitle"></h4>
+                                <p id="crisisDate"></p>
                                 <p id="IDkeeper">Unfortunately, there are no API for charity available. So, a good old
                                     fashioned
                                     googling is the way to donate. When you are done, go back here and keep record of
