fixed wrong behaviors

--- a/public/index.html
+++ b/public/index.html
@@ -271,6 +271,8 @@
                         <form class="donation-update-form">
                             <fieldset id="IDUpdater">
                                 <legend>Update your $$$</legend>
+                                <p id="titleUpdater"></p>
+                                <p id="dateUpdater"></p>
                                 <div class="form-group">
                                     <label for="charityUpdate">Charity Name</label>
                                     <input type="text" id="charityUpdate" name="charityUpdate">
