--- a/public/index.html
+++ b/public/index.html
@@ -99,62 +99,35 @@
                         <ol>
                             <li class="revealed">You must register or login to use this app.</li>
                             <li class="revealed">Click <span class="fake-btn">register</span> on the header to be taken
-                                to
-                                the register page. You will be prompted to fill out a registration form.</li>
+                                to the register page. You will be prompted to fill out a registration form.</li>
                             <li class="revealed">Click <span class="fake-btn">login</span> on the header to be taken to
-                                the
-                                login page. You will be asked to enter your username and password.</li>
-                            <li class="revealed">Once You registered or logged in, you will be inside the main user
-                                page,
-                                which is populated with the latest ten crisis from around the globe.</li>
+                                the login page. You will be asked to enter your username and password.</li>
+                            <li class="revealed">Once You registered or logged in, you will be inside the <span class="fake-btn">main
+                                    user page</span>, which is populated with the latest ten crisis from around the
+                                globe.</li>
                             <li class="revealed">Click the <span class="fake-btn">link</span> on any crisis card to
-                                read
-                                more of the crisis that interest you.</li>
-                            <li class="revealed">You can add any crisis that interest you to your crisis collection by
-                                clicking
-                                the <span class="fake-btn">add</span> button.</li>
-                            <li class="revealed">Clicking the <span class="fake-btn">cancel</span> button will return
-                                you
-                                to the recent crisis page.
-                            </li>
-                            <li class="revealed">You can also <span class="fake-btn">search</span> for any crisis using
-                                any
-                                search term. The result is limited to ten crisis.</li>
-                            <li class="revealed">The crisis you added are located on <span class="fake-btn">my crisis</span>.</li>
-                            <li class="revealed">You can search for a specific crisis you have chosen by using the
-                                <span class="fake-btn">search</span>
-                                bar.</li>
+                                read more of the crisis that interest you.</li>
                             <li class="revealed">Click the <span class="fake-btn">donate</span> button on the crisis
-                                card
-                                to donate to that crisis. You are then prompted to fill out a form to keep a record of
-                                your
-                                donation. (Unfortunately, there is no charity API with a robust search features, so you
-                                have
-                                to do your own googling to find your own charity to donate to the chosen crisis)</li>
-                            <li class="revealed">Again, if you don't want to donate to that crisis, you can click the
-                                <span class="fake-btn">cancel</span>
-                                button.</li>
-                            <li class="revealed">Click <span class="fake-btn">delete</span> on the crisis card to
-                                delete
-                                a crisis from your collection.
-                            </li>
+                                card to donate to that crisis. You are then prompted to fill out a form to keep a
+                                record of your donation.</li>
+                            <li class="revealed">Clicking the <span class="fake-btn">cancel</span> button will return
+                                you to the recent crisis page.</li>
+                            <li class="revealed">You can also <span class="fake-btn">search</span> for any crisis using
+                                any search term. The result is limited to ten crisis.</li>
+                            <li class="revealed">The crisis you added are located on <span class="fake-btn">my crisis</span>.</li>
                             <li class="revealed">You can look at a list of your donations when you click <span class="fake-btn">my
-                                    donations
-                                </span>.</li>
+                                    donations</span>.</li>
                             <li class="revealed">Click <span class="fake-btn">update</span> to update your chosen
                                 donation.</li>
-                            <li class="revealed">Click <span class="fake-btn">delete</span> to delete your chosen
+                            <li class="revealed">Click <span class="fake-btn">delete</span> to delete your unwanted
                                 donation.</li>
                             <li class="revealed">You can search for a specific donation using the <span class="fake-btn">search</span>
                                 bar.</li>
                             <li class="revealed"><span class="fake-btn">my account</span> contain the details of your
-                                account.
-                                You can change your first name, last name, and email address, nothing more.</li>
+                                account. You can change your first name, last name, and email address, nothing more.</li>
                             <li class="revealed">You can look at your donation activities throughout a certain year by
-                                clicking
-                                <span class="fake-btn">my reports
-                                </span>. Once you are inside the page, you can <span class="fake-btn">pull</span>
-                                report from the server.</li>
+                                clicking <span class="fake-btn">my reports</span>. Once you are inside the page, you
+                                can <span class="fake-btn">pull</span> report from the server.</li>
                         </ol>
                     </div>
                 </section>
